--- a/ghi/new-location.html
+++ b/ghi/new-location.html
@@ -10,14 +10,14 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<title>Conference GO!</title>
-		<script type="module" src="./js/app.js"></script>
+		<title>New Location :: Conference GO!</title>
+		<script type="module" src="js/new-location.js"></script>
 	</head>
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#">Conference GO!</a>
+					<a class="navbar-brand" href="/">Conference GO!</a>
 					<button
 						class="navbar-toggler"
 						type="button"
@@ -38,7 +38,7 @@
 								<a
 									class="nav-link active"
 									aria-current="page"
-									href="#"
+									href="/"
 									>Home</a
 								>
 							</li>
@@ -62,35 +62,63 @@
 			</nav>
 		</header>
 		<main>
-			<div class="px-4 py-5 my-5 mt-0 text-center bg-info">
-				<img
-					class="bg-white rounded shadow d-block mx-auto mb-4"
-					src="./images/logo.svg"
-					alt=""
-					width="600"
-				/>
-				<h1 class="display-5 fw-bold">Conference GO!</h1>
-				<div class="col-lg-6 mx-auto">
-					<p class="lead mb-4">
-						The only resource you'll ever need to plan an run your
-						in-person or virtual conference for thousands of
-						attendees and presenters.
-					</p>
-				</div>
-			</div>
 			<div class="container">
-				<h2>Upcoming conferences</h2>
-				<div class="row row-cols-3">
-					<div id="col-0" class="col"></div>
-					<div id="col-1" class="col"></div>
-					<div id="col-2" class="col"></div>
+				<div class="row">
+					<div class="offset-3 col-6">
+						<div class="shadow p-4 mt-4">
+							<h1>Create a new location</h1>
+							<form id="create-location-form">
+								<div class="form-floating mb-3">
+									<input
+										placeholder="Name"
+										required
+										type="text"
+										id="name"
+										name="name"
+										class="form-control"
+									/>
+									<label for="name">Name</label>
+								</div>
+								<div class="form-floating mb-3">
+									<input
+										placeholder="Room count"
+										required
+										type="number"
+										name="room_count"
+										id="room_count"
+										class="form-control"
+									/>
+									<label for="room_count">Room count</label>
+								</div>
+								<div class="form-floating mb-3">
+									<input
+										placeholder="City"
+										required
+										type="text"
+										name="city"
+										id="city"
+										class="form-control"
+									/>
+									<label for="city">City</label>
+								</div>
+								<div class="mb-3">
+									<select
+										required
+										name="state"
+										id="state"
+										class="form-select"
+									>
+										<option selected value="">
+											Choose a state
+										</option>
+									</select>
+								</div>
+								<button class="btn btn-primary">Create</button>
+							</form>
+						</div>
+					</div>
 				</div>
 			</div>
 		</main>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-			crossorigin="anonymous"
-		></script>
 	</body>
 </html>
