Create conference form completed

--- a/ghi/new-conference.html
+++ b/ghi/new-conference.html
@@ -10,8 +10,8 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<title>New Location :: Conference GO!</title>
-		<script type="module" src="js/new-location.js"></script>
+		<title>New Conference :: Conference GO!</title>
+		<script type="module" src="js/new-conference.js"></script>
 	</head>
 	<body>
 		<header>
@@ -41,10 +41,18 @@
 							</li>
 							<li class="nav-item">
 								<a
-									class="nav-link active"
+									class="nav-link"
 									aria-current="page"
 									href="new-location.html"
 									>New location</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active"
+									aria-current="page"
+									href="new-conference.html"
+									>New conference</a
 								>
 							</li>
 						</ul>
@@ -71,50 +79,86 @@
 				<div class="row">
 					<div class="offset-3 col-6">
 						<div class="shadow p-4 mt-4">
-							<h1>Create a new location</h1>
-							<form id="create-location-form">
+							<h1>Create a new conference</h1>
+							<form id="create-conference-form">
 								<div class="form-floating mb-3">
 									<input
 										placeholder="Name"
 										required
 										type="text"
-										id="name"
 										name="name"
+										id="name"
 										class="form-control"
 									/>
 									<label for="name">Name</label>
 								</div>
 								<div class="form-floating mb-3">
 									<input
-										placeholder="Room count"
+										placeholder="Starts"
 										required
-										type="number"
-										name="room_count"
-										id="room_count"
+										type="date"
+										name="starts"
+										id="starts"
 										class="form-control"
 									/>
-									<label for="room_count">Room count</label>
+									<label for="starts">Starts</label>
 								</div>
 								<div class="form-floating mb-3">
 									<input
-										placeholder="City"
+										placeholder="Ends"
 										required
-										type="text"
-										name="city"
-										id="city"
+										type="date"
+										name="ends"
+										id="ends"
 										class="form-control"
 									/>
-									<label for="city">City</label>
+									<label for="ends">Ends</label>
+								</div>
+								<div class="mb-3">
+									<label for="description">Description</label>
+									<textarea
+										class="form-control"
+										id="description"
+										rows="3"
+										name="description"
+										class="form-control"
+									></textarea>
+								</div>
+								<div class="form-floating mb-3">
+									<input
+										placeholder="Maximum presentations"
+										required
+										type="number"
+										name="max_presentations"
+										id="max_presentations"
+										class="form-control"
+									/>
+									<label for="max_presentations"
+										>Maximum presentations</label
+									>
+								</div>
+								<div class="form-floating mb-3">
+									<input
+										placeholder="Maximum attendees"
+										required
+										type="number"
+										name="max_attendees"
+										id="max_attendees"
+										class="form-control"
+									/>
+									<label for="max_attendees"
+										>Maximum attendees</label
+									>
 								</div>
 								<div class="mb-3">
 									<select
 										required
-										name="state"
-										id="state"
+										name="location"
+										id="location"
 										class="form-select"
 									>
 										<option selected value="">
-											Choose a state
+											Choose a location
 										</option>
 									</select>
 								</div>
