--- a/ghi/index.html
+++ b/ghi/index.html
@@ -42,6 +42,22 @@
 									>Home</a
 								>
 							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									href="new-location.html"
+									>New location</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									href="new-conference.html"
+									>New conference</a
+								>
+							</li>
 						</ul>
 						<form class="d-flex">
 							<input
