added login form and djwto functionality

--- a/ghi/index.html
+++ b/ghi/index.html
@@ -58,6 +58,14 @@
 									>New conference</a
 								>
 							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									href="new-presentation.html"
+									>New presentation</a
+								>
+							</li>
 						</ul>
 						<form class="d-flex">
 							<input
@@ -67,11 +75,16 @@
 								aria-label="Search"
 							/>
 							<button
-								class="btn btn-outline-success"
+								class="btn btn-outline-success me-2"
 								type="submit"
 							>
 								Search
 							</button>
+							<a
+								class="btn btn-primary"
+								href="attend-conference.html"
+								>Attend!</a
+							>
 						</form>
 					</div>
 				</div>
@@ -92,6 +105,17 @@
 						in-person or virtual conference for thousands of
 						attendees and presenters.
 					</p>
+					<div
+						class="d-grid gap-2 d-sm-flex justify-content-sm-center"
+					>
+						<a
+							type="button"
+							class="btn btn-primary btn-lg px-4 gap-3"
+							href="attend-conference.html"
+						>
+							Attend a conference
+						</a>
+					</div>
 				</div>
 			</div>
 			<div class="container">
