--- a/ghi/new-conference.html
+++ b/ghi/new-conference.html
@@ -55,6 +55,14 @@
 									>New conference</a
 								>
 							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									href="new-presentation.html"
+									>New presentation</a
+								>
+							</li>
 						</ul>
 						<form class="d-flex">
 							<input
@@ -64,11 +72,16 @@
 								aria-label="Search"
 							/>
 							<button
-								class="btn btn-outline-success"
+								class="btn btn-outline-success me-2"
 								type="submit"
 							>
 								Search
 							</button>
+							<a
+								class="btn btn-primary"
+								href="attend-conference.html"
+								>Attend!</a
+							>
 						</form>
 					</div>
 				</div>
