--- a/ghi/new-presentation.html
+++ b/ghi/new-presentation.html
@@ -10,8 +10,8 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<title>New Location :: Conference GO!</title>
-		<script type="module" src="js/new-location.js"></script>
+		<title>New Presentation :: Conference GO!</title>
+		<script type="module" src="js/new-presentation.js"></script>
 	</head>
 	<body>
 		<header>
@@ -41,7 +41,7 @@
 							</li>
 							<li class="nav-item">
 								<a
-									class="nav-link active"
+									class="nav-link"
 									aria-current="page"
 									href="new-location.html"
 									>New location</a
@@ -57,7 +57,7 @@
 							</li>
 							<li class="nav-item">
 								<a
-									class="nav-link"
+									class="nav-link active"
 									aria-current="page"
 									href="new-presentation.html"
 									>New presentation</a
@@ -92,50 +92,76 @@
 				<div class="row">
 					<div class="offset-3 col-6">
 						<div class="shadow p-4 mt-4">
-							<h1>Create a new location</h1>
-							<form id="create-location-form">
+							<h1>Create a new presentation</h1>
+							<form id="create-presentation-form">
 								<div class="form-floating mb-3">
 									<input
-										placeholder="Name"
+										placeholder="Presenter name"
 										required
 										type="text"
-										name="name"
-										id="name"
+										name="presenter_name"
+										id="presenter_name"
 										class="form-control"
 									/>
-									<label for="name">Name</label>
+									<label for="presenter_name"
+										>Presenter name</label
+									>
 								</div>
 								<div class="form-floating mb-3">
 									<input
-										placeholder="Room count"
+										placeholder="Presenter email"
 										required
-										type="number"
-										name="room_count"
-										id="room_count"
+										type="email"
+										name="presenter_email"
+										id="presenter_email"
 										class="form-control"
 									/>
-									<label for="room_count">Room count</label>
+									<label for="presenter_email"
+										>Presenter email</label
+									>
 								</div>
 								<div class="form-floating mb-3">
 									<input
-										placeholder="City"
-										required
+										placeholder="Company name"
 										type="text"
-										name="city"
-										id="city"
+										name="company_name"
+										id="company_name"
 										class="form-control"
 									/>
-									<label for="city">City</label>
+									<label for="company_name"
+										>Company name</label
+									>
+								</div>
+								<div class="form-floating mb-3">
+									<input
+										placeholder="Title"
+										required
+										type="text"
+										name="title"
+										id="title"
+										class="form-control"
+									/>
+									<label for="title">Title</label>
+								</div>
+								<div class="mb-3">
+									<label for="synopsis">Synopsis</label>
+									<textarea
+										class="form-control"
+										id="synopsis"
+										rows="3"
+										name="synopsis"
+										class="form-control"
+									></textarea>
 								</div>
 								<div class="mb-3">
 									<select
 										required
-										name="state"
-										id="state"
+										name="conference"
+										id="conference"
 										class="form-select"
 									>
 										<option selected value="">
-											Choose a state
+											Choose a conference
 										</option>
 									</select>
 								</div>
